vol/configmap.yml
apiVersion: v1
kind: Pod
metadata:
  name: myapp
  labels:
    name: myapp
spec:
  containers:
  - name: myapp
    image: <Image>
    resources:
      limits:
        memory: "128Mi"
        cpu: "500m"
    ports:
      - containerPort: 80
    envFrom:             # 使用envFrom 获取configMap中的所有值
      - configMapRef:
          name: myapp-config
    volumeMounts:      # 使用configMap挂载文件,整个存储卷的内容通通表现为文件
    - name: data-volume
      mountPath: /etc/config
  volumes:
  - name: data-volume
    configMap:
      name: file-config
  # - name: data-volume
  #   secret:
  #     secretName: file-config
