vol/pod-nfs.yml
apiVersion: v1
kind: Pod
metadata:
  name: myapp
  labels:
    name: myapp
spec:
  containers:
  - name: busybox
    image: busybox 
    command: ["sleep", "3600"]
    resources:
      limits:
        memory: "128Mi"
        cpu: "500m"
    ports:
      - containerPort: 80
    volumeMounts:
      - name: nfs-volume
        mountPath: /data
  volumes:
    - name: nfs-volume
      nfs:
        server: <NFS_SERVER_IP>
        path: /path/on/nfs
